Fixed wrong width and height in Home page, social box styles

--- a/src/assets/styles/pages/Home/Socials.module.scss
+++ b/src/assets/styles/pages/Home/Socials.module.scss
@@ -14,10 +14,13 @@
 		display: flex;
 
 		a {
+			width: 50px;
+			height: 50px;
+			margin-right: 40px;
+
 			.socialBox {
 				width: 50px;
 				height: 50px;
-				margin-right: 40px;
 				background-color: black;
 				background-size: 40px;
 				background-repeat: no-repeat;
